html outline and gitignore

--- a/index.html
+++ b/index.html
@@ -1,14 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
+
     <head>
         <meta charset="UTF-8" />
         <title>Sandrine Poissonnet</title>
     </head>
+
     <body>
-        <h1>SANDRINE P.</h1>
+
+        <!-- navigation -->
+        <header>
+            <h1>SANDRINE P.</h1>
         About Me
         Work
         Contact Me
         Resume
+        </header>
+
+        <!-- hero/jumbotron -->
+        <section>
+
+        </section>
+
+        <!-- "About Me" section -->
+        <section>
+            <h2>About Me</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut inventore possimus ratione quam a asperiores corrupti reiciendis distinctio ex dignissimos officia sint fugiat, harum cum molestias aperiam fuga. Explicabo, autem!</p>
+        </section>
+
+        <!-- "Work" section -->
+        <section>
+            <h2>About Me</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut inventore possimus ratione quam a asperiores corrupti reiciendis distinctio ex dignissimos officia sint fugiat, harum cum molestias aperiam fuga. Explicabo, autem!</p>
+        </section>
+
+        <!-- "Contact Me" section -->
+        <section>
+            <h2>About Me</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut inventore possimus ratione quam a asperiores corrupti reiciendis distinctio ex dignissimos officia sint fugiat, harum cum molestias aperiam fuga. Explicabo, autem!</p>
+        </section>
+
+        <!-- "Resume" section -->
+        <section>
+            <h2>About Me</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut inventore possimus ratione quam a asperiores corrupti reiciendis distinctio ex dignissimos officia sint fugiat, harum cum molestias aperiam fuga. Explicabo, autem!</p>
+        </section>
+        
+        <!-- footer -->
+        <footer>
+            <h2>😲 Made with awe by Sandrine Poissonnet.</h2>
+        </footer>
+
     </body>
 </html>
