added html for header

--- a/index.html
+++ b/index.html
@@ -10,11 +10,25 @@
 
         <!-- navigation -->
         <header>
-            <h1>SANDRINE P.</h1>
-        About Me
-        Work
-        Contact Me
-        Resume
+            <h1>
+                <a href="index.html">SANDRINE P.</a>
+            </h1>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="#about-me">About Me</a>
+                    </li>
+                    <li>
+                        <a href="#portfolio">Portfolio</a>
+                    </li>
+                    <li>
+                        <a href="#contact-me">Contact Me</a>
+                    </li>
+                    <li>
+                        <a href="#resume">Resume</a>
+                    </li>
+                </ul>
+            </nav>
         </header>
 
         <!-- hero/jumbotron -->
@@ -28,27 +42,24 @@
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut inventore possimus ratione quam a asperiores corrupti reiciendis distinctio ex dignissimos officia sint fugiat, harum cum molestias aperiam fuga. Explicabo, autem!</p>
         </section>
 
-        <!-- "Work" section -->
+        <!-- "Portfolio" section -->
         <section>
-            <h2>About Me</h2>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut inventore possimus ratione quam a asperiores corrupti reiciendis distinctio ex dignissimos officia sint fugiat, harum cum molestias aperiam fuga. Explicabo, autem!</p>
+            <h2>Portfolio</h2>
         </section>
 
         <!-- "Contact Me" section -->
         <section>
-            <h2>About Me</h2>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut inventore possimus ratione quam a asperiores corrupti reiciendis distinctio ex dignissimos officia sint fugiat, harum cum molestias aperiam fuga. Explicabo, autem!</p>
+            <h2>Contact Me</h2>
         </section>
 
         <!-- "Resume" section -->
         <section>
-            <h2>About Me</h2>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut inventore possimus ratione quam a asperiores corrupti reiciendis distinctio ex dignissimos officia sint fugiat, harum cum molestias aperiam fuga. Explicabo, autem!</p>
+            <h2>Resume</h2>
         </section>
-        
+
         <!-- footer -->
         <footer>
-            <h2>😲 Made with awe by Sandrine Poissonnet.</h2>
+            <h2>Made with delight by Sandrine Poissonnet.</h2>
         </footer>
 
     </body>
