added initial styles for the header

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <head>
         <meta charset="UTF-8" />
         <title>Sandrine Poissonnet</title>
+        <link rel="stylesheet" href="./assets/css/style.css" />
     </head>
 
     <body>
@@ -60,6 +61,7 @@
         <!-- footer -->
         <footer>
             <h2>Made with delight by Sandrine Poissonnet.</h2>
+            <div>&copy; 2020 MaNJuMind</div>
         </footer>
 
     </body>
