--- a/index.html
+++ b/index.html
@@ -33,8 +33,11 @@
         </header>
 
         <!-- hero/jumbotron -->
-        <section>
-
+        <section class="hero">
+            <div>
+                <h3>Web Development</h3>
+                <h3>Data Analysis & Visualization</h3>
+            </div>
         </section>
 
         <!-- "About Me" section -->
