added initial styles for hero

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
         <!-- hero/jumbotron -->
         <section class="hero">
             <div>
-                <h3>Web Development</h3>
-                <h3>Data Analysis & Visualization</h3>
+                <h3><span id="web">Web</span><span id="dev">Development</span></h3>
+                <h3><span id="data">Data</span><span id="analysis">Analysis</span><span id="and">&<span id="viz">Visualization</span></h3>
             </div>
         </section>
 
