added favicon and defined class section-title

--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
     <head>
         <meta charset="UTF-8" />
         <title>Sandrine Poissonnet</title>
+        <!-- favicon -->
+        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+        <link rel="manifest" href="/site.webmanifest">
+        <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">    
+        <meta name="msapplication-TileColor" content="#da532c">
+        <meta name="theme-color" content="#ffffff">
+        <!-- stylesheet -->
         <link rel="stylesheet" href="./assets/css/style.css" />
     </head>
 
@@ -41,24 +50,24 @@
         </section>
 
         <!-- "About Me" section -->
-        <section>
-            <h2>About Me</h2>
+        <section id="about-me">
+            <h2 class="section-title">About<br/>Me</h2>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut inventore possimus ratione quam a asperiores corrupti reiciendis distinctio ex dignissimos officia sint fugiat, harum cum molestias aperiam fuga. Explicabo, autem!</p>
         </section>
 
         <!-- "Portfolio" section -->
-        <section>
-            <h2>Portfolio</h2>
+        <section id="portfolio">
+            <h2 class="section-title">Portfolio</h2>
         </section>
 
         <!-- "Contact Me" section -->
-        <section>
-            <h2>Contact Me</h2>
+        <section id="contact-me">
+            <h2 class="section-title">Contact<br/>Me</h2>
         </section>
 
         <!-- "Resume" section -->
-        <section>
-            <h2>Resume</h2>
+        <section id="resume">
+            <h2 class="section-title">Resume</h2>
         </section>
 
         <!-- footer -->
