added content and flexbox to hero

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <link rel="mask-icon" href="./assets/images/favicon/safari-pinned-tab.svg" color="#5bbad5">
         <meta name="msapplication-TileColor" content="#da532c">
         <meta name="theme-color" content="#ffffff">
-        
+
         <!-- stylesheet -->
         <link rel="stylesheet" href="./assets/css/style.css" />
     </head>
@@ -45,9 +45,16 @@
 
         <!-- hero/jumbotron -->
         <section class="hero">
-            <div>
-                <h3><span id="web">Web</span><span id="dev">Development</span></h3>
-                <h3><span id="data">Data</span><span id="analysis">Analysis</span><span id="and">&<span id="viz">Visualization</span></h3>
+            <div class="greeting">
+                <div>
+                    <h1><span id="hi">Hi!</span></h1>
+                    <h3><span id="hola">¡Hola!</span></h3>
+                    <h3><span id="bonjour">Bonjour!</span></h3>
+                </div>
+            </div>
+            <div class="hero-title">
+                <h3 class="hero-title-line" id="webdev">Web Development</h3>
+                <h3 class="hero-title-line"><span id="datanal">Data Analysis</span><span id="and">&<span id="viz">Visualization</span></h3>
             </div>
         </section>
 
