more flexing on hero

--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
         <section class="hero">
             <div class="greeting">
                 <div>
+                    <img src="assets/images/pic_sandrine_sml.jpg" alt="headshot of Sandrine Poissonnet" />
+                </div>
+                <div class="greeting-text">
                     <h1><span id="hi">Hi!</span></h1>
                     <h3><span id="hola">¡Hola!</span></h3>
                     <h3><span id="bonjour">Bonjour!</span></h3>
