added flags and animation to greeting div

--- a/index.html
+++ b/index.html
@@ -46,18 +46,32 @@
         <!-- hero/jumbotron -->
         <section class="hero">
             <div class="greeting">
-                <div>
-                    <img src="assets/images/pic_sandrine_sml.jpg" alt="headshot of Sandrine Poissonnet" />
+                <div class="greeting-img">
+                    <h1>Hello</h1>
                 </div>
-                <div class="greeting-text">
-                    <h1><span id="hi">Hi!</span></h1>
-                    <h3><span id="hola">¡Hola!</span></h3>
-                    <h3><span id="bonjour">Bonjour!</span></h3>
+                <div class="flags">
+                    <ul>
+                        <li>
+                            <a href="index.html">🇺🇸</a>
+                        </li>
+                        <li>
+                            <a href="sp/index.html">🇪🇸</a>
+                        </li>
+                        <li>
+                            <a href="fr/index.html">🇫🇷</a>
+                        </li>
+                    </ul>
                 </div>
             </div>
             <div class="hero-title">
-                <h3 class="hero-title-line" id="webdev">Web Development</h3>
-                <h3 class="hero-title-line"><span id="datanal">Data Analysis</span><span id="and">&<span id="viz">Visualization</span></h3>
+                <div  class="hero-title-1">
+                    <h3 id="webdev">Web Development</h3>
+                </div>
+                <div class="hero-title-2">
+                    <h3 id="datanal">Data Analysis</h3>
+                    <h3 id="and">&</h3>
+                    <h3 id="viz">Visualization</h3>
+                </div>
             </div>
         </section>
 
