more viz enhancements on header and hero

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
                 <div class="greeting-img">
                     <h1>Hello</h1>
                 </div>
+            <!-- WORK IN PROGRESS:
                 <div class="flags">
                     <ul>
                         <li>
@@ -62,6 +63,7 @@
                         </li>
                     </ul>
                 </div>
+            -->
             </div>
             <div class="hero-title">
                 <div  class="hero-title-1">
@@ -69,8 +71,8 @@
                 </div>
                 <div class="hero-title-2">
                     <h3 id="datanal">Data Analysis</h3>
-                    <h3 id="and">&</h3>
-                    <h3 id="viz">Visualization</h3>
+                    <!--h3 id="and">&</h3-->
+                    <h3 id="viz"><span id="and">&</span>Visualization</h3>
                 </div>
             </div>
         </section>
