added grid container to portfolio section

--- a/index.html
+++ b/index.html
@@ -78,26 +78,74 @@
             </div>
         </section>
 
+        <main>
         <!-- "About Me" section -->
         <section id="about-me">
             <h2 class="section-title">About<br/>Me</h2>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut inventore possimus ratione quam a asperiores corrupti reiciendis distinctio ex dignissimos officia sint fugiat, harum cum molestias aperiam fuga. Explicabo, autem!</p>
+            <div class="section-content">
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut inventore possimus ratione quam a asperiores corrupti reiciendis distinctio ex dignissimos officia sint fugiat, harum cum molestias aperiam fuga. Explicabo, autem!</p>
+            </div>
         </section>
 
         <!-- "Portfolio" section -->
         <section id="portfolio">
             <h2 class="section-title">Portfolio</h2>
+            <div class="section-content portfolio-grid-container">
+                <div class="portfolio-grid-item dintel">
+                    <h4><a href="https://petitspoissons.github.io/dintel-solutions/index.html">Dintel Solutions</a></h4>
+                    <h5>Machine Learning Project</h5>
+                    <p>scikit-learn | statsmodels | python | pandas</p>
+                </div>
+                <div class="portfolio-grid-item whr">
+                    <h4><a href="https://petitspoissons.github.io/WHR2019/index.html">World Happiness Report</a></h4>
+                    <h5>Data Visualization Project </h5>
+                    <p>d3.js | leaflet.js | geojson | python | pandas</p>
+                </div>
+                <div class="portfolio-grid-item belly-button">
+                    <h4><a href="https://belly-buttons-spp.herokuapp.com/">Belly Button Biodiversity</a></h4>
+                    <h5>Interactive Dashboard (Heroku app)</h5>
+                    <p>python | pandas | d3.js | flask | sqlalchemy</p>
+                </div>
+                <div class="portfolio-grid-item usgs">
+                    <h4><a href="https://petitspoissons.github.io/USGS_Mapping/">USGS - Earthquakes & Fault Lines</a></h4>
+                    <h5>Interactive Map</h5>
+                    <p>leaflet.js | geojson</p>
+                </div>
+                <div class="portfolio-grid-item d3times">
+                    <h4><a href="https://petitspoissons.github.io/D3Times/">D3Times</a></h4>
+                    <h5>Interactive Chart</h5>
+                    <p>html | css | d3.js</p>
+                </div>
+                <div class="portfolio-grid-item ufo">
+                    <h4><a href="https://petitspoissons.github.io/UFO-sightings/index.html">UFO Sightings</a></h4>
+                    <h5>Interactive Table</h5>
+                    <p>html | css | js</p>
+                </div>
+                <div class="portfolio-grid-item run-buddy">
+                    <h4><a href="https://petitspoissons.github.io/run-buddy/">Run Buddy</a></h4>
+                    <h5>Landing Page</h5>
+                    <p>html | css</p>
+                </div>
+            </div>
         </section>
 
         <!-- "Contact Me" section -->
         <section id="contact-me">
             <h2 class="section-title">Contact<br/>Me</h2>
+            <div class="section-content">
+                <div>
+                    <a href="https://www.linkedin.com/in/sandrinepoissonnet/">LinkedIn</a>
+                </div>
+            </div>
         </section>
 
         <!-- "Resume" section -->
         <section id="resume">
             <h2 class="section-title">Resume</h2>
+            <div class="section-content"></div>
         </section>
+
+        </main>
 
         <!-- footer -->
         <footer>
