added background images to grid items

--- a/index.html
+++ b/index.html
@@ -92,39 +92,53 @@
             <h2 class="section-title">Portfolio</h2>
             <div class="section-content portfolio-grid-container">
                 <div class="portfolio-grid-item dintel">
-                    <h4><a href="https://petitspoissons.github.io/dintel-solutions/index.html">Dintel Solutions</a></h4>
-                    <h5>Machine Learning Project</h5>
-                    <p>scikit-learn | statsmodels | python | pandas</p>
+                    <a href="https://petitspoissons.github.io/dintel-solutions/index.html">
+                        <h4>Dintel Solutions</h4>
+                        <h5>Machine Learning Project</h5>
+                        <p>scikit-learn | statsmodels | python | pandas</p>
+                    </a>
                 </div>
                 <div class="portfolio-grid-item whr">
-                    <h4><a href="https://petitspoissons.github.io/WHR2019/index.html">World Happiness Report</a></h4>
-                    <h5>Data Visualization Project </h5>
-                    <p>d3.js | leaflet.js | geojson | python | pandas</p>
+                    <a href=href="https://petitspoissons.github.io/WHR2019/index.html">
+                        <h4>World Happiness Report</h4>
+                        <h5>Data Visualization Project </h5>
+                        <p>d3.js | leaflet.js | geojson | python | pandas</p>
+                    </a>
                 </div>
                 <div class="portfolio-grid-item belly-button">
-                    <h4><a href="https://belly-buttons-spp.herokuapp.com/">Belly Button Biodiversity</a></h4>
-                    <h5>Interactive Dashboard (Heroku app)</h5>
-                    <p>python | pandas | d3.js | flask | sqlalchemy</p>
-                </div>
-                <div class="portfolio-grid-item usgs">
-                    <h4><a href="https://petitspoissons.github.io/USGS_Mapping/">USGS - Earthquakes & Fault Lines</a></h4>
-                    <h5>Interactive Map</h5>
-                    <p>leaflet.js | geojson</p>
-                </div>
-                <div class="portfolio-grid-item d3times">
-                    <h4><a href="https://petitspoissons.github.io/D3Times/">D3Times</a></h4>
-                    <h5>Interactive Chart</h5>
-                    <p>html | css | d3.js</p>
-                </div>
-                <div class="portfolio-grid-item ufo">
-                    <h4><a href="https://petitspoissons.github.io/UFO-sightings/index.html">UFO Sightings</a></h4>
-                    <h5>Interactive Table</h5>
-                    <p>html | css | js</p>
+                    <a href="https://belly-buttons-spp.herokuapp.com/">
+                        <h4>Belly Button Biodiversity</h4>
+                        <h5>Interactive Dashboard (Heroku app)</h5>
+                        <p>python | pandas | d3.js | flask | sqlalchemy</p>
+                    </a>
                 </div>
                 <div class="portfolio-grid-item run-buddy">
-                    <h4><a href="https://petitspoissons.github.io/run-buddy/">Run Buddy</a></h4>
-                    <h5>Landing Page</h5>
-                    <p>html | css</p>
+                    <a href="https://petitspoissons.github.io/run-buddy/">
+                        <h4>Run Buddy</h4>
+                        <h5>Landing Page</h5>
+                        <p>html | css</p>
+                    </a>
+                </div>
+                <div class="portfolio-grid-item ufo">
+                    <a href="https://petitspoissons.github.io/UFO-sightings/index.html">
+                        <h4>UFO Sightings</h4>
+                        <h5>Interactive Table</h5>
+                        <p>html | css | js</p>
+                    </a>
+                </div>
+                <div class="portfolio-grid-item d3times">
+                    <a href="https://petitspoissons.github.io/D3Times/">
+                        <h4>D3Times</h4>
+                        <h5>Interactive Chart</h5>
+                        <p>html | css | d3.js</p>
+                    </a>
+                </div>
+                <div class="portfolio-grid-item usgs">
+                    <a href="https://petitspoissons.github.io/USGS_Mapping/">
+                        <h4>USGS - Earthquakes & Fault Lines</h4>
+                        <h5>Interactive Map</h5>
+                        <p>leaflet.js | geojson</p>
+                    </a>
                 </div>
             </div>
         </section>
