added style and hover animation to grid

--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="#about-me">About Me</a>
+                        <a href="#about">About</a>
                     </li>
                     <li>
                         <a href="#portfolio">Portfolio</a>
                     </li>
                     <li>
-                        <a href="#contact-me">Contact Me</a>
+                        <a href="#contact">Contact</a>
                     </li>
                     <li>
                         <a href="#resume">Resume</a>
@@ -80,10 +80,12 @@
 
         <main>
         <!-- "About Me" section -->
-        <section id="about-me">
-            <h2 class="section-title">About<br/>Me</h2>
+        <section id="about">
+            <h2 class="section-title">About</h2>
             <div class="section-content">
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut inventore possimus ratione quam a asperiores corrupti reiciendis distinctio ex dignissimos officia sint fugiat, harum cum molestias aperiam fuga. Explicabo, autem!</p>
+                <p>Freelance web developer and data analyst with strong statistical skills, research and teaching experience and a healthy appetite for new challenges.<br/>
+                HTML/CSS/JavaScript, Python, D3, Leaflet, Tableau, MongoDB, MySQL, Flask, SQLAlchemy.<br/>
+                Bilingual French-English, fluent in Spanish.</p>
             </div>
         </section>
 
@@ -92,50 +94,50 @@
             <h2 class="section-title">Portfolio</h2>
             <div class="section-content portfolio-grid-container">
                 <div class="portfolio-grid-item dintel">
-                    <a href="https://petitspoissons.github.io/dintel-solutions/index.html">
+                    <a href="https://petitspoissons.github.io/dintel-solutions/index.html" target="_blank">
                         <h4>Dintel Solutions</h4>
-                        <h5>Machine Learning Project</h5>
-                        <p>scikit-learn | statsmodels | python | pandas</p>
+                        <h5>Machine Learning</h5>
+                        <p>scikit-learn | statsmodels | python | pandas | numpy</p>
                     </a>
                 </div>
                 <div class="portfolio-grid-item whr">
-                    <a href=href="https://petitspoissons.github.io/WHR2019/index.html">
+                    <a href="https://petitspoissons.github.io/WHR2019/index.html" target="_blank">
                         <h4>World Happiness Report</h4>
-                        <h5>Data Visualization Project </h5>
+                        <h5>Data Visualization</h5>
                         <p>d3.js | leaflet.js | geojson | python | pandas</p>
                     </a>
                 </div>
                 <div class="portfolio-grid-item belly-button">
-                    <a href="https://belly-buttons-spp.herokuapp.com/">
+                    <a href="https://belly-buttons-spp.herokuapp.com/" target="_blank">
                         <h4>Belly Button Biodiversity</h4>
-                        <h5>Interactive Dashboard (Heroku app)</h5>
-                        <p>python | pandas | d3.js | flask | sqlalchemy</p>
+                        <h5>Interactive Dashboard</h5>
+                        <p>python | pandas | flask | sqlalchemy | d3.js | plotly.js</p>
                     </a>
                 </div>
                 <div class="portfolio-grid-item run-buddy">
-                    <a href="https://petitspoissons.github.io/run-buddy/">
+                    <a href="https://petitspoissons.github.io/run-buddy/" target="_blank">
                         <h4>Run Buddy</h4>
                         <h5>Landing Page</h5>
                         <p>html | css</p>
                     </a>
                 </div>
                 <div class="portfolio-grid-item ufo">
-                    <a href="https://petitspoissons.github.io/UFO-sightings/index.html">
+                    <a href="https://petitspoissons.github.io/UFO-sightings/index.html" target="_blank">
                         <h4>UFO Sightings</h4>
                         <h5>Interactive Table</h5>
                         <p>html | css | js</p>
                     </a>
                 </div>
                 <div class="portfolio-grid-item d3times">
-                    <a href="https://petitspoissons.github.io/D3Times/">
+                    <a href="https://petitspoissons.github.io/D3Times/" target="_blank">
                         <h4>D3Times</h4>
                         <h5>Interactive Chart</h5>
                         <p>html | css | d3.js</p>
                     </a>
                 </div>
                 <div class="portfolio-grid-item usgs">
-                    <a href="https://petitspoissons.github.io/USGS_Mapping/">
-                        <h4>USGS - Earthquakes & Fault Lines</h4>
+                    <a href="https://petitspoissons.github.io/USGS_Mapping/" target="_blank">
+                        <h4>USGS</h4>
                         <h5>Interactive Map</h5>
                         <p>leaflet.js | geojson</p>
                     </a>
@@ -143,9 +145,9 @@
             </div>
         </section>
 
-        <!-- "Contact Me" section -->
-        <section id="contact-me">
-            <h2 class="section-title">Contact<br/>Me</h2>
+        <!-- "Contact" section -->
+        <section id="contact">
+            <h2 class="section-title">Contact</h2>
             <div class="section-content">
                 <div>
                     <a href="https://www.linkedin.com/in/sandrinepoissonnet/">LinkedIn</a>
@@ -156,14 +158,16 @@
         <!-- "Resume" section -->
         <section id="resume">
             <h2 class="section-title">Resume</h2>
-            <div class="section-content"></div>
+            <div class="section-content">
+                <p>Click <a href="/assets/images/resume.pdf">here</a> to view my resume.</p>
+            </div>
         </section>
 
         </main>
 
         <!-- footer -->
         <footer>
-            <h2>Made with delight by Sandrine Poissonnet.</h2>
+            <h2>Made with joy by Sandrine Poissonnet.</h2>
             <div>&copy; 2020 MaNJuMind</div>
         </footer>
 
