test relative address

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         <section id="resume">
             <h2 class="section-title">Resume</h2>
             <div class="section-content">
-                <p>Click <a href="/assets/images/resume.pdf">here</a> to view my resume.</p>
+                <p>Click <a href="./assets/images/resume.pdf">here</a> to view my resume.</p>
             </div>
         </section>
 
