added more media queries

--- a/index.html
+++ b/index.html
@@ -149,8 +149,18 @@
         <section id="contact">
             <h2 class="section-title">Contact</h2>
             <div class="section-content">
-                <div>
-                    <a href="https://www.linkedin.com/in/sandrinepoissonnet/">LinkedIn</a>
+                <div class="contact-info">
+                    <div class="phone">
+                        P: <a href="tel:310.351.2676">310.351.2676</a>
+                    </div>
+                    <div class="email">
+                        E: <a href="mailto:sandrine@manjumind.com">sandrine@manjumind.com</a>
+                    </div>
+                    <div class="linked-in">
+                        <a href="https://www.linkedin.com/in/sandrinepoissonnet/">
+                            <img href="./assets/images/linkedin-long.png"/>
+                        </a>
+                    </div>
                 </div>
             </div>
         </section>
@@ -159,7 +169,7 @@
         <section id="resume">
             <h2 class="section-title">Resume</h2>
             <div class="section-content">
-                <p>Click <a href="./assets/images/resume.pdf">here</a> to view my resume.</p>
+                <p>Click <a href="./assets/images/resume.pdf" target="_blank">here</a> to view my resume.</p>
             </div>
         </section>
 
