fixed some media queries issues

--- a/index.html
+++ b/index.html
@@ -81,7 +81,9 @@
         <main>
         <!-- "About Me" section -->
         <section id="about">
-            <h2 class="section-title">About</h2>
+            <div class="section-title">
+                <h2 >About</h2>
+            </div>
             <div class="section-content">
                 <p>Freelance web developer and data analyst with strong statistical skills, research and teaching experience and a healthy appetite for new challenges.<br/>
                 HTML/CSS/JavaScript, Python, D3, Leaflet, Tableau, MongoDB, MySQL, Flask, SQLAlchemy.<br/>
@@ -91,7 +93,9 @@
 
         <!-- "Portfolio" section -->
         <section id="portfolio">
-            <h2 class="section-title">Portfolio</h2>
+            <div class="section-title">
+                <h2>Portfolio</h2>
+            </div>
             <div class="section-content portfolio-grid-container">
                 <div class="portfolio-grid-item dintel">
                     <a href="https://petitspoissons.github.io/dintel-solutions/index.html" target="_blank">
@@ -147,7 +151,9 @@
 
         <!-- "Contact" section -->
         <section id="contact">
-            <h2 class="section-title">Contact</h2>
+            <div class="section-title">
+                <h2>Contact</h2>
+            </div>
             <div class="section-content">
                 <div class="contact-info">
                     <div class="phone">
@@ -167,7 +173,9 @@
 
         <!-- "Resume" section -->
         <section id="resume">
-            <h2 class="section-title">Resume</h2>
+            <div class="section-title">
+                <h2>Resume</h2>
+            </div>
             <div class="section-content">
                 <p>Click <a href="./assets/images/resume.pdf" target="_blank">here</a> to view my resume.</p>
             </div>
