added styles to contact section

--- a/index.html
+++ b/index.html
@@ -154,19 +154,15 @@
             <div class="section-title">
                 <h2>Contact</h2>
             </div>
-            <div class="section-content">
-                <div class="contact-info">
-                    <div class="phone">
-                        P: <a href="tel:310.351.2676">310.351.2676</a>
-                    </div>
-                    <div class="email">
-                        E: <a href="mailto:sandrine@manjumind.com">sandrine@manjumind.com</a>
-                    </div>
-                    <div class="linked-in">
-                        <a href="https://www.linkedin.com/in/sandrinepoissonnet/">
-                            <img href="./assets/images/linkedin-long.png"/>
-                        </a>
-                    </div>
+            <div class="section-content contact-info">
+                <div class="tel-email">
+                    P: <a href="tel:310.351.2676">310.351.2676</a><br/>
+                    E: <a href="mailto:sandrine@manjumind.com">sandrine@manjumind.com</a>
+                </div>
+                <div class="linkedin">
+                    <a href="https://www.linkedin.com/in/sandrinepoissonnet/" target="_blank">
+                        <img src="./assets/images/linkedin-long.png" alt="linkedin logo"/>
+                    </a>
                 </div>
             </div>
         </section>
