clean up comments in html and unused files

--- a/index.html
+++ b/index.html
@@ -50,21 +50,6 @@
                 <div class="greeting-img">
                     <h1>Hello</h1>
                 </div>
-            <!-- WORK IN PROGRESS:
-                <div class="flags">
-                    <ul>
-                        <li>
-                            <a href="index.html">🇺🇸</a>
-                        </li>
-                        <li>
-                            <a href="sp/index.html">🇪🇸</a>
-                        </li>
-                        <li>
-                            <a href="fr/index.html">🇫🇷</a>
-                        </li>
-                    </ul>
-                </div>
-            -->
             </div>
             <div class="hero-title">
                 <div  class="hero-title-1">
@@ -72,7 +57,6 @@
                 </div>
                 <div class="hero-title-2">
                     <h3 id="datanal">Data Analysis</h3>
-                    <!--h3 id="and">&</h3-->
                     <h3 id="viz"><span id="and">&</span>Visualization</h3>
                 </div>
             </div>
@@ -114,7 +98,7 @@
                 <div class="portfolio-grid-item belly-button">
                     <a href="https://belly-buttons-spp.herokuapp.com/" target="_blank">
                         <h4>Belly Button Biodiversity</h4>
-                        <h5>Interactive Dashboard</h5>
+                        <h5>Dashboard</h5>
                         <p>python | pandas | flask | sqlalchemy | d3.js | plotly.js</p>
                     </a>
                 </div>
