added two projects to portfolio

--- a/index.html
+++ b/index.html
@@ -81,6 +81,19 @@
                 <h2>Portfolio</h2>
             </div>
             <div class="section-content portfolio-grid-container">
+                <div class="portfolio-grid-item covie">
+                    <a href="https://jaaybe.github.io/covidsearch/index.html" target="_blank">
+                        <h5>Dashboard</h5>
+                        <p>html | css | bootstrap | js | Plotly.js | server-side APIs</p>
+                    </a>
+                </div>
+                <div class="portfolio-grid-item weather">
+                    <a href="https://petitspoissons.github.io/weather-dashboard/" target="_blank">
+                        <h4>Weather App</h4>
+                        <h5>Dashboard</h5>
+                        <p>html | css | bootstrap | js | Moment.js | OpenWeather API</p>
+                    </a>
+                </div>
                 <div class="portfolio-grid-item dintel">
                     <a href="https://petitspoissons.github.io/dintel-solutions/index.html" target="_blank">
                         <h4>Dintel Solutions</h4>
@@ -100,20 +113,6 @@
                         <h4>Belly Button Biodiversity</h4>
                         <h5>Dashboard</h5>
                         <p>python | pandas | flask | sqlalchemy | d3.js | plotly.js</p>
-                    </a>
-                </div>
-                <div class="portfolio-grid-item run-buddy">
-                    <a href="https://petitspoissons.github.io/run-buddy/" target="_blank">
-                        <h4>Run Buddy</h4>
-                        <h5>Landing Page</h5>
-                        <p>html | css</p>
-                    </a>
-                </div>
-                <div class="portfolio-grid-item ufo">
-                    <a href="https://petitspoissons.github.io/UFO-sightings/index.html" target="_blank">
-                        <h4>UFO Sightings</h4>
-                        <h5>Interactive Table</h5>
-                        <p>html | css | js</p>
                     </a>
                 </div>
                 <div class="portfolio-grid-item d3times">
