edits on readme

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <!-- navigation -->
         <header>
             <h1>
-                <a href="index.html">SANDRINE P.</a>
+                SANDRINE P.
             </h1>
             <nav>
                 <ul>
