added the-tech-blog and shrinko

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <div class="section-content portfolio-grid-container">
                 <div class="portfolio-grid-item covie">
                     <a href="https://jaaybe.github.io/covidsearch/index.html" target="_blank">
-                        <h5>Dashboard</h5>
+                        <h5>COVID-19 Dashboard</h5>
                         <p>html | css | bootstrap | js | Plotly.js | server-side APIs</p>
                     </a>
                 </div>
@@ -127,6 +127,20 @@
                         <h4>USGS</h4>
                         <h5>Interactive Map</h5>
                         <p>leaflet.js | geojson</p>
+                    </a>
+                </div>
+                <div class="portfolio-grid-item shrinko">
+                    <a href="https://shrinko.herokuapp.com/" target="_blank">
+                        <h4>SHRINKO</h4>
+                        <h5>Electronic Mental Health Records</h5>
+                        <p>Node.js | Express.js | MySQL | Sequelize | bcrypt</p>
+                    </a>
+                </div>
+                <div class="portfolio-grid-item tech-blog">
+                    <a href="https://the-tech-blog.herokuapp.com/" target="_blank">
+                        <h4>the TECH blog</h4>
+                        <h5>Blog</h5>
+                        <p>Node.js | Express.js | MySQL | Sequelize | bcrypt</p>
                     </a>
                 </div>
             </div>
